kubeflow-deployments/private-blueprint/.build/cert-manager/apps_v1_deployment_cert-manager-cainjector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cert-manager-cainjector
  namespace: cert-manager
  labels:
    app: cainjector
    app.kubernetes.io/component: cert-manager
    app.kubernetes.io/name: cert-manager
    kustomize.component: cert-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cainjector
      app.kubernetes.io/component: cert-manager
      app.kubernetes.io/name: cert-manager
      kustomize.component: cert-manager
  template:
    metadata:
      labels:
        app: cainjector
        app.kubernetes.io/component: cert-manager
        app.kubernetes.io/name: cert-manager
        kustomize.component: cert-manager
      annotations: null
    spec:
      serviceAccountName: cert-manager-cainjector
      containers:
      - name: cainjector
        image: gcr.io/gcp-private-dev/mirror/quay.io/jetstack/cert-manager-cainjector:v0.11.0
        args:
        - --v=2
        - --leader-election-namespace=kube-system
        resources: {}
        imagePullPolicy: IfNotPresent
