kubeflow-deployments/private-blueprint/.build/cert-manager/admissionregistration.k8s.io_v1beta1_validatingwebhookconfiguration_cert-manager-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: cert-manager-webhook
  labels:
    app: webhook
    app.kubernetes.io/component: cert-manager
    app.kubernetes.io/name: cert-manager
    kustomize.component: cert-manager
  annotations:
    cert-manager.io/inject-apiserver-ca: "true"
webhooks:
- name: webhook.certmanager.k8s.io
  clientConfig:
    service:
      name: kubernetes
      namespace: default
      path: /apis/webhook.cert-manager.io/v1beta1/validations
    caBundle: ""
  failurePolicy: Fail
  rules:
  - resources:
    - certificates
    - issuers
    - clusterissuers
    - certificaterequests
    apiGroups:
    - cert-manager.io
    apiVersions:
    - v1alpha2
    operations:
    - CREATE
    - UPDATE
  sideEffects: None
